...

        if (useTwoColumns) {
          return Row(
            children: [
              Expanded(
                child: SingleChildScrollView(
                  child: _buildSection(context, 'Minor', upperCategories),
                ),
              ),
              const SizedBox(width: 8),
              Expanded(
                child: SingleChildScrollView(
                  child: _buildSection(context, 'Major', lowerCategories),
                ),
              ),
            ],
          );
        }

...
